# revive-code-bot

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  renovate.json  setup.cfg
.github/: .env
.github/workflows/: deploy.yml  master.yml  pr-check.yml
deploy/: docker-compose.prod.yml
rabbitmq-data/data/: .erlang.cookie
rabbitmq-data/data/mnesia/rabbit@12bdc7b206ff/: cluster_nodes.config  nodes_running_at_shutdown
rabbitmq-data/data/mnesia/rabbit@12bdc7b206ff/coordination/rabbit@12bdc7b206ff/: 00000001.wal  meta.dets  names.dets
rabbitmq-data/data/mnesia/rabbit@12bdc7b206ff/coordination/rabbit@12bdc7b206ff/RABBITBLD41RBIQKPH/: config
rabbitmq-data/data/mnesia/rabbit@700fa0702017/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_exchange.DCL  rabbit_durable_queue.DCD  rabbit_durable_route.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq-data/data/mnesia/rabbit@700fa0702017/coordination/rabbit@700fa0702017/: 00000002.wal  meta.dets  names.dets
rabbitmq-data/data/mnesia/rabbit@700fa0702017/coordination/rabbit@700fa0702017/RABBIT5TN35A1UUXZV/: 00000001.segment  config
rabbitmq-data/data/mnesia/rabbit@700fa0702017/msg_stores/vhosts/6ACKRSE4PYJS9837HUQT5DBFP/: .vhost
rabbitmq-data/data/mnesia/rabbit@700fa0702017/msg_stores/vhosts/80NDSP02RGBNXEHXG1QLJJUIN/: .vhost
rabbitmq-data/data/mnesia/rabbit@f65ad0d7e88f/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCD  rabbit_durable_exchange.DCL  rabbit_durable_queue.DCD  rabbit_durable_route.DCD  rabbit_runtime_parameters.DCD  rabbit_user.DCD  rabbit_user_permission.DCD  rabbit_vhost.DCD
rabbitmq-data/data/mnesia/rabbit@f65ad0d7e88f/coordination/rabbit@f65ad0d7e88f/: 00000004.wal  meta.dets  names.dets
rabbitmq-data/data/mnesia/rabbit@f65ad0d7e88f/coordination/rabbit@f65ad0d7e88f/RABBITJ1JCWB79NDE1/: 00000001.segment  config
src/: manage.py
src/app/: main.py
src/config/: .settings.py.swp  __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/main/: .algorithms.py.swp  .service.py.swp  .views.py.swp  __init__.py  admin.py  algorithms.py  apps.py  exceptions.py  models.py  service.py  tasks.py  views.py
src/main/management/: __init__.py
src/main/management/commands/: process_repos.py  update_croniq_tokens.py  worker.py
src/main/migrations/: 0001_initial.py  0002_analyzejobsschedule.py  0002_ghrepo_installation_and_more.py  0002_ghrepo_scheduling.py  0003_alter_ghinstallation_table_alter_ghrepo_table.py  0003_alter_repoconfig_table.py  0004_ghrepo_status.py  0004_rename_installation_ghrepo_gh_installation.py  0005_alter_touchrecord_path_and_more.py  0005_ghrepo_has_webhook.py  0006_processtask.py  0006_touchrecord.py  0007_alter_processtask_created_at_alter_processtask_repo_and_more.py  0007_alter_processtask_status.py  0007_remove_ghrepo_gh_installation_ghrepo_installation_id_and_more.py  0008_auto_20251124_1834.py  __init__.py
src/main/services/: __init__.py  croniq_task.py  default_revive_config.py  gh_revive_config.py  revive_config.py  synchronize_touch_records.py  worker.py
src/main/services/github_objs/: __init__.py  cloned_repo.py  fk_cloned_repo.py  fk_new_issue.py  gh_cloned_repo.py  gh_issue_comment.py  gh_new_issue.py  gh_repo_installation.py  github_client.py  issue_comment.py  new_issue.py  repo_installation.py
src/main/services/revive_config/: __init__.py  default_revive_config.py  disk_revive_config.py  fk_revive_config.py  gh_revive_config.py  merged_config.py  pg_revive_config.py  pg_updated_revive_config.py  revive_config.py  safe_disk_revive_config.py  str_config.py
src/main/types/: gh_repository.py
src/main/views/: __init__.py  connected_repos.py  gh_webhook.py  healthcheck.py  index.py  process_repo.py
src/templates/: index.html
src/tests/: conftest.py  test_command.py  test_create_issue.py  test_define_files.py  test_gh_webhook.py  test_healtcheck.py  test_process_repo_endpoint.py  test_read_config.py  test_read_config_from_repo.py  test_register_repo.py  test_sync_touch_records.py  test_webhook.py
src/tests/fixtures/: coverage.xml
src/tests/main/: test_service.py
src/tests/main/migrations/: test_0008_auto_20251124_1834.py
src/tests/main/services/github_objs/: test_gh_cloned_repo.py
src/tests/main/services/revive_config/: test_merged_config.py
src/tests/main/views/: test_gh_webhook.py  test_process_repo.py
(+15 files in other folders)
