[tool.poetry]
name = "revive-code-bot"
version = "0.1.0"
description = ""
authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
litestar = "2.5.1"
gitpython = "3.1.32"
gunicorn = "21.2.0"
uvicorn = "0.26.0"
psycopg2-binary = "2.9.9"
pydantic-settings = "2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
isort = "5.12.0"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 119
skip = ["migrations/*.py", ".venv"]
multi_line_output = 3
include_trailing_comma = true
